3.代码结构需要优化重构

# 上次问题解决方案：

————————————————————————————————————————————————————————————————————————

2020年8月16日12:36:45
# 当前进度：
1.播放MP4文件。一切正常。

# 待处理问题：
1.TextureView更换为GLSurface，因为需要加水印，特效，以及视频和图像的处理，所以需要学习OpenGL ES了。

# 上次问题解决方案：
1.传入的PTS根据mediaFormat中的frameRate走，并且视频加入帧率控制。
2.增加音频的播放，MediaCodec-AudioTrack

————————————————————————————————————————————————————————————————————————

总结：
    本demo时间横跨一个月，每周末跟进进度，用时四个周末。到此也就告一段落了。
主要熟悉了音视频编解码简单API的使用以及一些基本的处理。
    下一阶段需要学习OpenGL ES，这样才会支持更多的操作，基于这个demo，逐步开始更换为新的方式，会在GitHub上重新new一个project。
目前的构想是最终实现一个音视频录制播放器，可以加一些流行的效果（参照热门的短视频APP，美图APP）
    基础功能大概如下：
1. 主动操作：拍照/录像，并在操作过程中可以添加 滤镜，水印TAG，自动美颜/瘦脸 等热门效果
2. 被动操作：查看照片/视频：
                1. 照片：滤镜，水印TAG，修图/美颜，单图剪裁，多图拼接
                2. 视频：暂停/跳转/拖动，快进快退，倍速调整，水印，滤镜，视频截取，

————————————————————————————————————————————————————————————————————————

2020年8月23日14:44:38
# 当前进度：
1.预览界面更换为GLSurfaceView，预览成功
2.搜索，学习OpenGL ES API，并在代码中添加注释

# 待处理问题：
1.调试录制功能

# 上次问题解决方案：
1.搞清楚了大概的流程，就是有些API不熟

————————————————————————————————————————————————————————————————————————

2020年8月29日16:59:12
# 当前进度：
1.无，一直在看Demo，还没有写自己的

# 待处理问题：
1.调试录制功能

# 上次问题解决方案：
1.熟悉OpenGL ES
————————————————————————————————————————————————————————————————————————

2020年8月30日14:06:10
# 当前进度：
1.无，一直在看Demo，还没有写自己的

# 待处理问题：
1.调试录制功能

# 上次问题解决方案：
1.熟悉OpenGL ES
————————————————————————————————————————————————————————————————————————

2020年9月5日13:03:48
# 当前进度：
1.该处理录制部分的代码

# 待处理问题：
1.录制功能

# 上次问题解决方案：
1.熟悉OpenGL ES
————————————————————————————————————————————————————————————————————————

2020年9月5日13:03:48
# 当前进度：
1.总体流程框架弄完了

# 待处理问题：
1.录制功能有问题，待调试解决

# 上次问题解决方案：
1.熟悉OpenGL ES
————————————————————————————————————————————————————————————————————————

2020年9月12日16:37:49
# 当前进度：
1.学习EGL,FBO,SurfaceTexture等

# 待处理问题：
1.录制功能有问题，待调试解决

# 上次问题解决方案：
1.熟悉OpenGL ES
————————————————————————————————————————————————————————————————————————

2020年9月13日15:30:36
# 当前进度：
1.学习EGL,FBO

# 待处理问题：
1.录制功能有问题，待调试解决

# 上次问题解决方案：
1.熟悉OpenGL ES