@@ -188,3 +188,14 @@
 
 # 上次问题解决方案：
 1.熟悉OpenGL ES
+————————————————————————————————————————————————————————————————————————
+
+2020年9月19日14:37:19
+# 当前进度：
+1.OpenGL，EGL，FBO看了一个礼拜，基本都理解了。目前在处理视频录制问题，定位为Muxer没有开启。
+
+# 待处理问题：
+1.没有开启muxer
+
+# 上次问题解决方案：
+1.熟悉OpenGL ES
